# arrg

./: .gitignore  Pipfile  README.md  justfile  pyproject.toml  setup.py
.github/workflows/: ci.yml
arrg/: app.py  argument.py  constants.py  option.py  process.py
examples/: app_inheritance.py  automatic_union_type_conversion.py  mixed_arguments.py  mixed_options.py  multiple_subcommands.py  nested_subcommands.py  property_decorator.py  simple_argument.py  simple_option.py  simple_subcommand.py  subcommand_inheritance.py
src/arrg/: __init__.py  app.py  argument.py  constants.py  option.py  parser.py  process.py  type_resolver.py  utils.py
tests/: test_app.py  test_app_parameters.py  test_argument.py  test_option.py  test_subcommand.py  test_type_conversion.py  test_type_resolver.py  test_utils.py
